# risc-bot

./: .gitlab-ci.yml  Cargo.toml
docker/: Dockerfile
migrations/2018-07-14-112340_create_chats/: up.sql
src/: app.rs  main.rs  models.rs  schema.rs  state.rs  stats.rs  traits.rs  util.rs
src/cmd/: handler.rs
src/cmd/action/: all.rs  duck.rs  echo.rs  echohtml.rs  exec.rs  help.rs  id.rs  mod.rs  ping.rs  retweet.rs  risc.rs  start.rs  stats.rs  test.rs
src/executor/: isolated.rs  normal.rs
src/msg/: handler.rs
