[package]
name = "risc-bot"
version = "0.0.1"
authors = ["timvisee <timvisee@gmail.com>"]

[dependencies]
chrono = "0.4"
colored = "1.6"
diesel = { version = "1.3", features = ["chrono", "mysql"] }
dotenv = "0.14"
failure = "0.1"
futures = "0.1"
humansize = "1.1"
humantime = "1.1"
htmlescape = "0.3"
lazy_static = "1.0"
regex = "1.0"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-process = "0.2"
tokio-signal = "0.2"
tokio-timer = "0.2"
urlencoding = "1.0"

# Use a specific version with patched Telegram bot API
[dependencies.telegram-bot]
version = "*"
git = "https://github.com/telegram-rs/telegram-bot"
rev = "d82b179"
