[package]
name = "risc-bot"
version = "0.2.0"
authors = ["timvisee <timvisee@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.50"
chrono = "0.4"
colored = "1.6"
diesel = { version = "1.4", features = ["chrono", "mysql", "r2d2"] }
dotenv = "0.14"
failure = "0.1"
futures = "0.3"
humansize = "1.1"
humantime = "1.1"
htmlescape = "0.3"
lazy_static = "1.0"
regex = "1.0"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
urlencoding = "1.0"

# Use a specific version with patched Telegram bot API
[dependencies.telegram-bot]
version = "*"
git = "https://github.com/telegram-rs/telegram-bot"
rev = "65ad5cf"
